# mini-lm-training

./: .gitignore  DATASETS.md  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
info/: duplicate_list.csv  train_list.txt  val_list.txt
nanotron/: Dockerfile  docker-compose.yaml
nanotron/pretraining/: config_200m_llama.yaml  run_pretraining.py
scripts/: create_val_split.py  deduplicate_1.py  deduplicate_2.py  fit_tokenizer.py  prepack_data.py
scripts/download/: download_bl_books_1800_1899.ps1
scripts/preprocessing/: process_blbooks.py  process_gutenberg.py  process_ncse.py  process_ocs_correction.py  process_old_bailey.py
training/: generate.py  train.py
training/configs/: 300m_pretrain.yaml  debug60m_pretrain.yaml  llama200m_pretrain.yaml
training/configs-remote/: 300m_pretrain.yaml
training/minillm/: collator.py  data.py  trainer.py
