[project]
name = "mini-llm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=5.0.0",
    "datatrove[io]>=0.8.0",
    "fastparquet>=2026.5.0",
    "ipython>=9.14.1",
    "jupyter>=1.1.1",
    "numba>=0.65.1",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "pytest>=9.1.1",
    "tokenizers>=0.22.2",
    "torch>=2.12.1",
    "torchvision>=0.27.1",
    "tqdm>=4.68.3",
    "transformers>=5.12.1",
    "wandb>=0.28.0",
]
